--- a/src/index.css
+++ b/src/index.css
@@ -466,3 +466,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.responsive-img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover; /* garde le cadrage propre */
+}
