--- a/src/index.css
+++ b/src/index.css
@@ -467,6 +467,10 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: whitesmoke;
+}
+
 .responsive-img {
   width: 100%;
   height: auto;
