--- a/src/pages/Informations/style.module.css
+++ b/src/pages/Informations/style.module.css
@@ -1,16 +1,12 @@
-.mainSection{
-    width: 100%;
-    background-color: whitesmoke;
-}
-
-.Container{
-    background-color: white;
+.InfosSection{
     width: 1000px;
     margin: 0 auto;
-    padding: 20px 0;
+    background-color: white;
+    margin-bottom: 20px;
 }
 
-.Container h2{
+
+.InfosSection h1{
     font-size:50px;
     line-height: 60px;
     font-weight: 900;
@@ -19,7 +15,7 @@
     text-transform: capitalize;
 }
 
-.Container p{
+.InfosSection p{
     font-family: Montserrat, Helvetica;
     font-size: 16px;
     font-weight: 600;
@@ -28,7 +24,7 @@
     text-align: justify;
 }
 
-.Container h3{
+.InfosSection h2{
     font-size:30px;
     line-height: 30px;
     font-weight: 700;
@@ -36,48 +32,26 @@
     padding: 20px 0;
 }
 
-
-ul li{
-    list-style-type: none;
-    margin-left: 50px;
-    padding: 10px 0;
-}
-ul li strong{
-    padding: 5px;
-    border-radius: 10px;
+.InfosSection ul li{
+    list-style:circle;
 }
 
 @media screen and (max-width: 950px) {
-  .Container{
+  .InfosSection{
     width: 100%;
     padding: 20px;
   }
   
-  .Container h2{
+  .InfosSection h1{
     font-size:40px;
     line-height: 50px;
-    font-weight: 900;
-    font-family: var(--the-tenth-title-font-family);
-    padding: 20px 0;
-    text-transform: capitalize;
 }
-.Container h3{
+
+.InfosSection h2{
     font-size:25px;
     line-height: 30px;
     font-weight: 700;
     font-family: var(--the-tenth-title-font-family);
     padding: 20px 0;
 }
-}
-
-
-.links a{
-    display: block;
-    padding-top: 10px;
-    margin-left: 30px;
-    color: black;
-}
-
-.links a:hover {
-  color: #ff0000;
 }
