--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -156,6 +156,7 @@ margin: 0 auto;
   display: block;
   width: auto;
   max-width: 240px;
+  text-align: center;
   margin: 0 auto;
   margin-bottom: 30px;
 }
